# elasticio

./: docker-compose.yml
server/: autocomp.py  es.py  import.py  pyproject.toml
